# Lorette

./: CMakeLists.txt  README  build  build.bat  ico.rc  lorette.pro  lorette.qrc
examples/: 3x3--.lor  3x3-.lor  3x3.lor  5x5.lor  d3_3.lor
src/: label.cpp  label.h  lorette.cpp  lorette.h  lorette.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrice.cpp  matrice.h  new_matrice.ui  resultat.cpp  resultat.h  resultat.ui  settings.cpp  settings.h  settings.ui
win32-shared/: Makefile  Makefile.Debug  Makefile.Release  object_script.lorette.Release  ui_lorette.h  ui_resultat.h  ui_settings.h
win32-static/: Makefile  Makefile.Debug  Makefile.Release  object_script.lorette.Debug  ui_lorette.h  ui_resultat.h  ui_settings.h
